--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@react-spring/web": "^9.7.4",
+    "axios": "^1.7.4",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
@@ -21,7 +23,8 @@
     "react-router-dom": "^6.26.0",
     "react-toastify": "^10.0.5",
     "react-typewriter-effect": "^1.1.0",
-    "remark-gfm": "^4.0.0"
+    "remark-gfm": "^4.0.0",
+    "rss-parser": "^3.13.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
