new admin panal add

--- a/package.json
+++ b/package.json
@@ -11,17 +11,26 @@
   },
   "dependencies": {
     "@react-spring/web": "^9.7.4",
+    "@uiw/react-codemirror": "^4.23.5",
+    "@uiw/react-md-editor": "^4.0.4",
     "axios": "^1.7.4",
+    "brace": "^0.11.1",
+    "codemirror": "^6.0.1",
+    "firebase": "^10.14.1",
+    "install": "^0.13.0",
     "moment": "^2.30.1",
+    "npm": "^10.9.0",
+    "prismjs": "^1.29.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1",
     "react-modal": "^3.16.1",
     "react-paginate": "^8.2.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.26.0",
-    "react-toastify": "^10.0.5",
+    "react-toastify": "^10.0.6",
     "react-typewriter-effect": "^1.1.0",
     "remark-gfm": "^4.0.0",
     "rss-parser": "^3.13.0"
