--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "brace": "^0.11.1",
     "codemirror": "^6.0.1",
     "firebase": "^10.14.1",
+    "framer-motion": "^11.11.9",
     "install": "^0.13.0",
     "moment": "^2.30.1",
     "npm": "^10.9.0",
@@ -30,10 +31,13 @@
     "react-paginate": "^8.2.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.26.0",
+    "react-spring": "^9.7.4",
+    "react-swipeable": "^7.0.1",
     "react-toastify": "^10.0.6",
     "react-typewriter-effect": "^1.1.0",
     "remark-gfm": "^4.0.0",
-    "rss-parser": "^3.13.0"
+    "rss-parser": "^3.13.0",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
