--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "npm": "^10.9.0",
     "prismjs": "^1.29.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
