--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.10",
     "@react-spring/web": "^9.7.4",
     "@uiw/react-codemirror": "^4.23.5",
     "@uiw/react-md-editor": "^4.0.4",
@@ -24,6 +25,7 @@
     "prismjs": "^1.29.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
